--- a/0/0.markdown
+++ b/0/0.markdown
@@ -15,7 +15,8 @@ The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code
 
 ## Solving level0 
 
-The title for level0 is warming up 
+The title for level0 is warming up.
+It's always a good idea to check the HTML title because the HTML titles are usually helpful to solve the problems.
 You can check the [title](/images/warming_up.png) by looking at the tab where you opened the pythonchallenge problem.
 From the title I can guess that this level shouldn't be that hard.
 
@@ -24,7 +25,7 @@ On the moniter there is a yellow rectangle with `2**38` written on it.
 Below the image of the computer there is a hint that tells you to change the URL address. 
 With all the information it looks like I should use `2**38` and change the URL.
 
-[This] (http://www.pythonchallenge.com/pc/def/0.html) is our current URL.
+[This](http://www.pythonchallenge.com/pc/def/0.html) is our current URL.
 If you look closely there is a number in the URL 0.html. 
 Calculating `2**38` and replacing it with 0 is likely to solve level0. 
 
@@ -54,5 +55,7 @@ powers of nubmers. The pow function also let's you calculate the modular as well
 print(pow(2,38))
 ```
 
-Calculating `2**38` gives me 274877906944. 
-When I change the URL from (http://www.pythonchallenge.com/pc/def/0.html) to (http://www.pythonchallenge.com/pc/def/274877906944.html) changes the url and level1 pops up.
+Calculating `2**38` gives me `274877906944`. 
+When I change the URL from (http://www.pythonchallenge.com/pc/def/0.html) to (http://www.pythonchallenge.com/pc/def/274877906944.html) level0 changes to level1.
+
+I'll try to explain the code and how to solve these problems in detail as much as possible because I struggled a lot when solving these problems on my own also the solutions or writeups were hard to understand. It might be because I'm dumb or something lol but anways... 
