fix broken html again

--- a/0/0.md
+++ b/0/0.md
@@ -18,11 +18,13 @@ The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code
 The title for level0 is warming up.
 It's always a good idea to check the HTML title because the HTML titles are usually helpful to solve the problems.
 You can check the [title](/images/warming_up.png) by looking at the tab where you opened the pythonchallenge problem.
+
 After checking the HTML title you should also have a look at the image file Python Challenge provides you. 
 The title of the image file also helps you solve the puzzle. You can view that using right-click and Inspect. 
 You'll then see some HTML tags. 
-The tag after <img src> is the name of the file. 
-In level 0 <img src="calc.jpg"> it's calc.jpg.
+
+The tag after `<img src>` is the name of the file. 
+In level 0 `<img src="calc.jpg">` it's calc.jpg.
 
 From the title I can guess that this level shouldn't be that hard.
 
