changed image folder location

--- a/0/0.md
+++ b/0/0.md
@@ -17,7 +17,7 @@ The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code
 
 The title for level0 is warming up.
 It's always a good idea to check the HTML title because the HTML titles are usually helpful to solve the problems.
-You can check the [title](/images/warming_up.png) by looking at the tab where you opened the pythonchallenge problem.
+You can check the [title](/0/warming_up.png) by looking at the tab where you opened the pythonchallenge problem.
 
 After checking the HTML title you should also have a look at the image file Python Challenge provides you. 
 The title of the image file also helps you solve the puzzle. You can view that using right-click and Inspect. 
@@ -28,7 +28,7 @@ In level 0 `<img src="calc.jpg">` it's calc.jpg.
 
 From the title I can guess that this level shouldn't be that hard.
 
-Level0 has a [picture](/images/calc.jpg) of a old computer.
+Level0 has a [picture](/0/calc.jpg) of a old computer.
 On the moniter there is a yellow rectangle with `2**38` written on it. 
 Below the image of the computer there is a hint that tells you to change the URL address. 
 With all the information it looks like I should use `2**38` and change the URL.
