--- a/1/1.md
+++ b/1/1.md
@@ -8,17 +8,16 @@ Moving your cursor to the tab will show it the HTML title. You can also view it 
 I'm also given an image called [map.jpg](/1/map.jpg).
 It's a notebook that has `K->M, O->Q, E->G` written on it.
 
+There's also a [ciphertext](/1/level1_hints.png).
 
-Looking closely moving *2 alphabets* from K gets you M, O gets you Q, E gets you G. 
+If you look carefully shifting *2 alphabets* from K gets you M, O gets you Q, E gets you G. 
 
 
 K,L,M 
 O,P,Q 
 E,F,G 
 
-That means shifting 2 characters from our ciphertext `g fmnc wms bgblr rpylqjyrc gr zw fylb. rfyrq ufyr amknsrcpq ypc dmp. bmgle gr gl zw fylb gq glcddgagclr ylb rfyr'q ufw rfgq rcvr gq qm jmle. sqgle qrpgle.kyicrpylq() gq pcamkkclbcb. lmu ynnjw ml rfc spj.`
-
-will likely gives us the decipher.
+That means shifting 2 characters from our ciphertext `g fmnc wms bgblr rpylqjyrc gr zw fylb. rfyrq ufyr amknsrcpq ypc dmp. bmgle gr gl zw fylb gq glcddgagclr ylb rfyr'q ufw rfgq rcvr gq qm jmle. sqgle qrpgle.kyicrpylq() gq pcamkkclbcb. lmu ynnjw ml rfc spj.` will likely gives us the decipher.
 
 There is a famous substitution cipher called [*Caesar_cipher*](https://en.wikipedia.org/wiki/Caesar_cipher) that's similar to the problem in level1.
 The only difference beteween Caesar cipher and the problem in level1 is that Caesar Cipher shifts 3 letters instead of 2. 
@@ -26,3 +25,13 @@ The only difference beteween Caesar cipher and the problem in level1 is that Cae
 Another famous substitution cipher called [ROT13](https://en.wikipedia.org/wiki/ROT13) is famous. 
 ROT13 shifts 13 lettters as it says in the name. 
 
+Running `1.py` gives us the decipher. 
+The decipher looks like this 
+
+*i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url*
+
+Since the URL for level1 is like this(http://www.pythonchallenge.com/pc/def/map.html) I should probably do the 2 bit shift on the word *map*. 
+
+If you pass the word map to `1.py` it gives you ocr. 
+
+Changing the URL from (http://www.pythonchallenge.com/pc/def/map.html) to (http://www.pythonchallenge.com/pc/def/ocr.html) gives level2. 
