added comments again

--- a/1/1.md
+++ b/1/1.md
@@ -34,4 +34,4 @@ Since the URL for level1 is like this(http://www.pythonchallenge.com/pc/def/map.
 
 If you pass the word map to `1.py` it gives you ocr. 
 
-Changing the URL from (http://www.pythonchallenge.com/pc/def/map.html) to (http://www.pythonchallenge.com/pc/def/ocr.html) gives level2. 
+Changing the URL from (http://www.pythonchallenge.com/pc/def/map.html) to (http://www.pythonchallenge.com/pc/def/ocr.html) gets you to level2.  
