--- a/1/1.md
+++ b/1/1.md
@@ -32,6 +32,33 @@ The decipher looks like this
 
 Since the URL for level1 is like this(http://www.pythonchallenge.com/pc/def/map.html) I should probably do the 2 bit shift on the word *map*. 
 
+```python
+import string
+
+letters = string.ascii_lowercase
+
+def dec(cipher):
+    decrypt = ""
+    for c in cipher:
+        if c in letters:
+            decrypt += chr((ord(c) - ord("a") + 2) % 26 + 97)
+        else:
+            decrypt += c
+    return decrypt
+```
+
+The dec function gets each character's ASCII value and subtracts a to get the index of the alphabet and adds `2`. this gives us the offset(how far it is away from a) and takes the remainder of it divided by 26. you need to divide it by 26 because there are only 26 letters in the alphabets. 
+97 is the ASCII value for 'a' so by adding the offset with 97 gives you the actual letters.
+
 If you pass the word map to `1.py` it gives you ocr. 
 
 Changing the URL from (http://www.pythonchallenge.com/pc/def/map.html) to (http://www.pythonchallenge.com/pc/def/ocr.html) gets you to level2.  
+
+P.S you can also do this using shellscript 
+
+```bash
+echo "g fmnc wms bgblr rpylqjyrc gr zw fylb. rfyrq ufyr amknsrcpq ypc dmp. bmgle gr gl zw fylb gq glcddgagclr ylb rfyr'q ufw rfgq rcvr gq qm jmle. sqgle qrpgle.kyicrpylq() gq pcamkkclbcb. lmu ynnjw ml rfc spj." | tr a-z c-za-x
+```
+
+If the letter is between `a-x` you can `2` letter shift it to `c-z`, but if the letter is `y` or `z` it needs to go back to `a` or `b` so the letters are changed rom all the letters except `y`,`z` where the original letters are. 
+That's why you need the extra `a-x` after `c-z`.  
