--- a/1/1.md
+++ b/1/1.md
@@ -1,6 +1,6 @@
 # Level 1 
 
-The URL for level1 changed from 274877906944.html to [URL](http://www.pythonchallenge.com/pc/def/map.html).
+The URL for level1 changed from `274877906944.html` to (http://www.pythonchallenge.com/pc/def/map.html).
 As I said previously for it's good practice to check the HTML title first.
 The HTML title for level1 is *What about making trans?* 
 Moving your cursor to the tab will show it the HTML title. You can also view it as a HTML tag by right clicking and Inspect.
