--- a/1/1.md
+++ b/1/1.md
@@ -1,11 +1,15 @@
 # Level 1 
 
 The URL for level1 changed from `274877906944.html` to (http://www.pythonchallenge.com/pc/def/map.html).
-As I said previously for it's good practice to check the HTML title first.
-The HTML title for level1 is *What about making trans?* 
-Moving your cursor to the tab will show it the HTML title. You can also view it as a HTML tag by right clicking and Inspect.
 
-I'm also given an image called [map.jpg](/1/map.jpg).
+As I said previously for it's good practice to check the HTML title first.
+
+The HTML title for level1 is *What about making trans?* 
+
+Moving your cursor to the tab will show it the HTML title. 
+You can also view it as a HTML tag by right clicking and Inspect.
+
+I'm also given an image [map.jpg](/1/map.jpg).
 It's a notebook that has `K->M, O->Q, E->G` written on it.
 
 There's also a [ciphertext](/1/level1_hints.png).
