--- a/1/1.md
+++ b/1/1.md
@@ -29,13 +29,6 @@ The only difference beteween Caesar cipher and the problem in level1 is that Cae
 Another famous substitution cipher called [ROT13](https://en.wikipedia.org/wiki/ROT13) is famous. 
 ROT13 shifts 13 lettters as it says in the name. 
 
-Running `1.py` gives us the decipher. 
-The decipher looks like this 
-
-*i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url*
-
-Since the URL for level1 is like this(http://www.pythonchallenge.com/pc/def/map.html) I should probably do the 2 bit shift on the word *map*. 
-
 
 ```python
 import string
@@ -52,6 +45,15 @@ def dec(cipher):
     return decrypt
 ```
 
+
+Running `1.py` gives us the decipher. 
+The decipher looks like this 
+
+*i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url*
+
+The decipher tells me to use `*string.maketrans()*` but because I've never used `*string.maketrans()*` I decided not to. 
+
+Since the URL for level1 is (http://www.pythonchallenge.com/pc/def/map.html) I should do the 2 letter shift on the word *map*. 
 
 The dec function gets each character's ASCII value and subtracts a to get the index of the alphabet and adds `2`. this gives us the offset(how far it is away from a) and takes the remainder of it divided by 26. you need to divide it by 26 because there are only 26 letters in the alphabets. 
 97 is the ASCII value for 'a' so by adding the offset with 97 gives you the actual letters.
