--- a/1/1.md
+++ b/1/1.md
@@ -51,7 +51,7 @@ The decipher looks like this
 
 *i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url*
 
-The decipher tells me to use `*string.maketrans()*` but because I've never used `*string.maketrans()*` I decided not to. 
+The decipher tells me to use `string.maketrans()` but because I've never used `string.maketrans()` I decided not to. 
 
 Since the URL for level1 is (http://www.pythonchallenge.com/pc/def/map.html) I should do the 2 letter shift on the word *map*. 
 
