--- a/0/0.md
+++ b/0/0.md
@@ -13,7 +13,7 @@ The course explains Python in a pretty detailed manner for beginnners.
 The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code-Python/dp/1617293784) for her lecture's in 2016. Not sure which textbook she's using in 2022 btw. 
 
 
-## Solving level0 
+## Level 0
 
 The title for level0 is warming up.
 It's always a good idea to check the HTML title because the HTML titles are usually helpful to solve the problems.
