--- a/1/1.md
+++ b/1/1.md
@@ -31,18 +31,17 @@ ROT13 shifts 13 lettters as it says in the name.
 
 
 ```python
-import string
-
+import string 
 letters = string.ascii_lowercase
 
 def dec(cipher):
-    decrypt = ""
+    decrypt = []
     for c in cipher:
         if c in letters:
-            decrypt += chr((ord(c) - ord("a") + 2) % 26 + 97)
+            decrypt.append(chr((ord(c) - ord("a") + 2) % 26 + 97))
         else:
-            decrypt += c
-    return decrypt
+            decrypt.append(c)
+    return "".join(decrypt)
 ```
 
 
@@ -58,7 +57,13 @@ Since the URL for level1 is (http://www.pythonchallenge.com/pc/def/map.html) I s
 The dec function gets each character's ASCII value and subtracts a to get the index of the alphabet and adds `2`. this gives us the offset(how far it is away from a) and takes the remainder of it divided by 26. you need to divide it by 26 because there are only 26 letters in the alphabets. 
 97 is the ASCII value for 'a' so by adding the offset with 97 gives you the actual letters.
 
-If you pass the word map to `1.py` it gives you ocr. 
+I initially wrote the `dec` function commented out. Many people say string concatenation is generally bad practice in Python. 
+Especially if the string is long. 
+Reading [this](https://stackoverflow.com/questions/39675898/is-python-string-concatenation-bad-practice) post will give an detailed explanation.
+
+According to the post string concatenation is fine if the string is short but using `''.join()` is the better choice so I went with that. 
+
+Passing the string `map` to `1.py` gives you `ocr`. 
 
 Changing the URL from (http://www.pythonchallenge.com/pc/def/map.html) to (http://www.pythonchallenge.com/pc/def/ocr.html) gets you to level2.  
 
