--- a/1/1.md
+++ b/1/1.md
@@ -44,8 +44,8 @@ def dec(cipher):
     return "".join(decrypt)
 ```
 
-The dec function gets each character's ASCII value and subtracts a to get the index of the alphabet and adds `2`. this gives us the offset(how far it is away from a) and takes the remainder of it divided by 26. you need to divide it by 26 because there are only 26 letters in the alphabets. 
-97 is the ASCII value for 'a' so by adding the offset with 97 gives you the actual letters.
+The `dec` function gets each character's ASCII value and subtracts a to get the index of the alphabet and adds `2`. this gives us the offset(how far it is away from a) and takes the remainder of it divided by `26`. you need to divide it by 26 because there are only 26 letters in the alphabets. 
+`97` is the ASCII value for `'a'` so by adding the offset with `97` gives you the actual letters.
 
 
 I initially wrote the `dec` function commented out. Many people say string concatenation is generally bad practice in Python. 
