adding bold fonts

--- a/1/1.md
+++ b/1/1.md
@@ -63,7 +63,7 @@ The decipher looks like this
 
 The decipher tells me to use `string.maketrans()` but because I've never used `string.maketrans()` I decided not to. 
 
-Since the URL for level1 is (http://www.pythonchallenge.com/pc/def/map.html) I should do the 2 letter shift on the word *map*. 
+Since the URL for level1 is (http://www.pythonchallenge.com/pc/def/map.html) I should do the 2 letter shift on the word **map**. 
 
 Passing the string `map` to `1.py` gives you `ocr`. 
 
