added newlines fixed a link

--- a/2/2.md
+++ b/2/2.md
@@ -3,14 +3,13 @@
 This time [ocr.jpg](/2/ocr.jpg) is given. It's a book. 
 The HTML title is also ocr. 
 
-There is an [interesting sentence](/2/2.png) though  
-which says `recognize the characters. maybe they are in the book, but MAYBE they are in the page source.`
+There is an [interesting sentence](/2/2.png) though  which says `recognize the characters. maybe they are in the book, but MAYBE they are in the page source.`
 
 So it was a pun on the page of a book and a page source of a website ... 
 
 Looking at the page source there is an HTML comment that says this *<!-- find rare characters in the mess below: -->*
 
-There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet [`a](/2/a.png)` in the mess. 
+There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet [a](/2/a.png)` in the mess. 
 
 The next logical step would be to check if there are other characters than `a` you should if there is a `b`, `c` etc so basically the alphabet.
 
@@ -18,6 +17,7 @@ IMO there are `2` ways to solve this.
 The first would be to save the mess into a text file and use bash commands to extract only the alphabets and the other would be to send a request to the pythonchallenge website and filter only the alphabets. 
 
 I find the bash solution to be more simpler and easier.
+
 
 1. Bash solution 
 Save the mess into a file and the use grep to grab only the alphabets. 
@@ -38,13 +38,17 @@ i
 t
 y
 ```
+
 Using `tr` to get rid of the `'\n'` gives the answer 
+
 
 ```bash
 cat mess | grep -o [a-zA-Z] | tr -d '\n'
 ```
 
+
 2. Using Python 
+
 
 ```python
 import requests
@@ -59,8 +63,10 @@ print(answer)
 
 ```
 
+
 Using the [request](https://requests.readthedocs.io/en/latest/) module let's you see the html page without having to right click and inspect.
 but the thing with using request is that It won't just select the mess it will also select `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
+
 
 That makes me need to set a boundary that only lets me select the mess which is in between `<!-- -->`. 
 
@@ -74,6 +80,7 @@ This is the Python code that does just what I said.
 boundary = r"<!--(.*?)-->"
 mess = re.findall(boundary, res.text, re.DOTALL)[-1]
 ```
+
 
 using the boundary lets us narrow down the part where we need to find the alphabets. 
 
