html comment not shown

--- a/2/2.md
+++ b/2/2.md
@@ -7,7 +7,7 @@ There is an [interesting sentence](/2/2.png) though  which says `recognize the c
 
 So it was a pun on the page of a book and a page source of a website ... 
 
-Looking at the page source there is an HTML comment that says this *<!-- find rare characters in the mess below: -->*
+Looking at the page source there is an HTML comment that says this `<!-- find rare characters in the mess below: -->`
 
 There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet [a](/2/a.png)` in the mess. 
 
