--- a/2/2.md
+++ b/2/2.md
@@ -9,7 +9,7 @@ So it was a pun on the page of a book and a page source of a website ...
 
 Looking at the page source there is an HTML comment that says this `<!-- find rare characters in the mess below: -->`
 
-There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet [a](/2/a.png)` in the mess. 
+There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet `[a]`(/2/a.png) in the mess. 
 
 The next logical step would be to check if there are other characters than `a` you should if there is a `b`, `c` etc so basically the alphabet.
 
