changed order of words

--- a/2/2.md
+++ b/2/2.md
@@ -11,7 +11,7 @@ Looking at the page source there is an HTML comment that says this `<!-- find ra
 
 There's a whole bunch of a crap but when using ctrl+f to see if there are any alphabets in the mess you can see that there's the alphabet [a](/2/a.png) in the mess. 
 
-The next logical step would be to check if there are other characters than `a` you should if there is a `b`, `c` etc so basically the alphabet.
+The next logical step would be to check if there are characters other than `a` you should if there is a `b`, `c` etc so basically the alphabet.
 
 IMO there are `2` ways to solve this.
 The first would be to save the mess into a text file and use bash commands to extract only the alphabets and the other would be to send a request to the pythonchallenge website and filter only the alphabets. 
