Regex is hard for noobs v2

--- a/2/2.md
+++ b/2/2.md
@@ -109,6 +109,6 @@ To wrap it up using **r"<!--(.*?)-->"** will select anything that matches that's
 To be Honest I don't think I did a good job explaining the solution using Python. I'm not that good at regex. 
 If you want more clear explanations you should study regex asking chatGPT, Gemini, Perplexity, Grok or any LLM will give you a better explanation with concrete examples but this is all I think I can do right now. 
 
-# h1 Regex is hard for noobs. 
+# <p>Regex is hard for noobs. <p> 
 
 Changing the URL from (http://www.pythonchallenge.com/pc/def/ocr.html) to (http://www.pythonchallenge.com/pc/def/equality.html) takes you to level3.
