added some comments on regex

--- a/2/2.md
+++ b/2/2.md
@@ -46,6 +46,11 @@ Using `tr` to get rid of the `'\n'` gives the answer
 cat mess | grep -o [a-zA-Z] | tr -d '\n'
 ```
 
+You won't get the answer if you don't use the brackets `([])` in the bash command. The brackets represent a range. 
+Sad thing is I'm not sure when you have to use `([])` and when it's okay to not use it. 
+To understand those nuances you probably have to study regex as a discrete subject deeply. 
+I'll try to add a better explanation if I reach that level of prowess.
+I don't think I'll reach that level of prowess in the near future lol... 
 
 2. Using Python 
 
