--- a/2/2.md
+++ b/2/2.md
@@ -69,7 +69,7 @@ print(answer)
 ```
 
 
-Using the [request](https://requests.readthedocs.io/en/latest/) module let's you see the html page without having to right click and inspect.
+Using the [requests](https://requests.readthedocs.io/en/latest/) module let's you see the html page without having to right click and inspect.
 but the thing with using request is that It won't just select the mess it will also select `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
 
 
@@ -77,7 +77,7 @@ That makes me need to set a boundary that only lets me select the mess which is 
 
 When sending a request to level2 it The request just spits out `<!-- find rare characters in the mess below: -->` and `<!-- our mess ... -->`
 
-I can use the [re](https://docs.python.org/3/library/re.html) to only select the part I want which is inside the second  `<!-- -->`.
+I can use the [re](https://docs.python.org/3/library/re.html) module  to only select the part I want which is inside the second  `<!-- -->`.
 
 This is the Python code that does just what I said.
 
