--- a/2/2.md
+++ b/2/2.md
@@ -69,11 +69,12 @@ print(answer)
 ```
 
 
-Using the [requests](https://requests.readthedocs.io/en/latest/) module let's you see the html page without having to right click and inspect.
-but the thing with using request is that It won't just select the mess it will also select `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
+Using the [requests](https://requests.readthedocs.io/en/latest/) module let's you see the html page source without having to right click and inspect.
+The downside of getting the page source with the requests module is that it won't just select the mess.
+It's also selects `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
 
 
-That makes me need to set a boundary that only lets me select the mess which is in between `<!-- -->`. 
+Then you need to set a boundary that only selects the mess which is between `<!-- -->`. 
 
 When sending a request to level2 it The request just spits out `<!-- find rare characters in the mess below: -->` and `<!-- our mess ... -->`
 
