--- a/2/2.md
+++ b/2/2.md
@@ -3,9 +3,9 @@
 This time [ocr.jpg](/2/ocr.jpg) is given. It's a book. 
 The HTML title is also ocr. 
 
-There is an [interesting sentence](/2/2.png) though  which says `recognize the characters. maybe they are in the book, but MAYBE they are in the page source.`
+There is an [interesting sentence](/2/2.png) though,  which says `recognize the characters. maybe they are in the book, but MAYBE they are in the page source.`
 
-So it was a pun on the page of a book and a page source of a website ... 
+I think the pun was on the page of a book and the page source of a website ... 
 
 Looking at the page source there is an HTML comment that says this `<!-- find rare characters in the mess below: -->`
 
