--- a/0/0.md
+++ b/0/0.md
@@ -4,12 +4,12 @@ Currently there are 33 levels.
 IMHO Python Challenge is not for beginners who have never coded in Python before or have little experience in Python. 
 
 It's for people who have some experience in Python but just aren't super good. 
-So if it's your first time writting in Python code I wouldn't try to solve these problems.
+So if it's your first time writing Python code I wouldn't try to solve these problems.
 Reading O'reilly books or learning from online courses would help you more. 
 
 For courses I recommend [this course](https://www.youtube.com/watch?v=xAcTmDO6NTI&list=PLUl4u3cNGP62A-ynp6v6-LGBCzeH3VAQB) from MIT OCW.
 
-The course explains Python in a pretty detailed manner for beginnners. 
+The course explains Python in a pretty detailed manner for beginners. 
 The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code-Python/dp/1617293784) for her lecture's in 2016. Not sure which textbook she's using in 2022 btw. 
 
 
@@ -29,7 +29,7 @@ In level 0 `<img src="calc.jpg">` it's calc.jpg.
 From the title I can guess that this level shouldn't be that hard.
 
 Level0 has a [picture](/0/calc.jpg) of a old computer.
-On the moniter there is a yellow rectangle with `2**38` written on it. 
+On the monitor there is a yellow rectangle with `2**38` written on it. 
 Below the image of the computer there is a hint that tells you to change the URL address. 
 With all the information it looks like I should use `2**38` and change the URL.
 
@@ -40,7 +40,7 @@ Calculating `2**38` and replacing it with 0 is likely to solve level0.
 Python has many ways to calculate `2**38`
 
 1. Using the ** operator 
-You can directly use ** to calcuate powers of numbers. 
+You can directly use ** to calculate powers of numbers. 
 
 ```python
 print(2**38)
@@ -56,7 +56,7 @@ print(2<<37)
 
 3. Using the pow() 
 Python provides the built-in [pow](https://docs.python.org/3/library/functions.html#pow) to calculate 
-powers of nubmers. The pow function also let's you calculate the modular as well. 
+powers of numbers. The pow function also let's you calculate the modular as well. 
 
 ```python 
 print(pow(2,38))
@@ -65,4 +65,4 @@ print(pow(2,38))
 Calculating `2**38` gives me `274877906944`. 
 When I change the URL from (http://www.pythonchallenge.com/pc/def/0.html) to (http://www.pythonchallenge.com/pc/def/274877906944.html) level0 changes to level1.
 
-I'll try to explain the code and how to solve these problems in detail as much as possible because I struggled a lot when solving these problems on my own also the solutions or writeups were hard to understand. It might be because I'm dumb or something lol but anways... 
+I'll try to explain the code and how to solve these problems in detail as much as possible because I struggled a lot when solving these problems on my own also the solutions or writeups were hard to understand. It might be because I'm dumb or something lol but anyways... 
