added some newlines

--- a/0/0.md
+++ b/0/0.md
@@ -58,7 +58,8 @@ print(2<<37)
 
 3. Using the pow() 
 Python provides the built-in [pow](https://docs.python.org/3/library/functions.html#pow) to calculate 
-powers of numbers. The pow function also let's you calculate the modular as well. 
+powers of numbers. 
+The pow function also let's you calculate the modular as well. 
 
 ```python 
 print(pow(2,38))
