got rid of indents

--- a/0/0.md
+++ b/0/0.md
@@ -39,7 +39,7 @@ Calculating `2**38` and replacing it with 0 is likely to solve level0.
 
 Python has many ways to calculate `2**38`
 
-1. Using the ** operator 
+1\. Using the ** operator 
 
 
 You can directly use ** to calculate powers of numbers. 
@@ -48,7 +48,7 @@ You can directly use ** to calculate powers of numbers.
 print(2**38)
 ```
 
-2. Using the bit shift operator 
+2\. Using the bit shift operator 
 
 
 Python provides bit shifting operators.
@@ -58,7 +58,7 @@ That would be another option.
 print(2<<37)
 ```
 
-3. Using the pow() 
+3\. Using the pow() 
 Python provides the built-in [pow](https://docs.python.org/3/library/functions.html#pow) to calculate 
 powers of numbers. 
 
