forgot a period period

--- a/2/2.md
+++ b/2/2.md
@@ -107,7 +107,7 @@ To prevent that from happening passing a **re.DOTALL** allows us to math all the
 The `[-1]` is needed because without it you can't specify the second `<!-- our mess ... -->` where we need to search and gather the alphabets.
 
 
-`()` in regex captures the pattern inside `()` it returns a group 
+`()` in regex captures the pattern inside `()` it returns a group.
 
 
 `*`  means to match the character/group before it 0 or more. 
