fixed lowercase to capital

--- a/5/5.md
+++ b/5/5.md
@@ -44,7 +44,7 @@ The reason why you need to use content is because the pickle module serializes o
 1\. Scrape the serialized data using requests and save it to a file 
 
 
-2\. the deserialize it using `pickle.load` 
+2\. Them deserialize it using `pickle.load` 
 
 
 ```python
