fixed order of words

--- a/5/5.md
+++ b/5/5.md
@@ -12,7 +12,7 @@ When looking at the page source there's an HTML link <peakhell src="banner.p"> a
 
 Following the [link](http://www.pythonchallenge.com/pc/def/banner.p) gives me a whole bunch of text. 
 
-Python has a [pickle](https://docs.python.org/3/library/pickle.html) module. 
+Python has a module named [pickle](https://docs.python.org/3/library/pickle.html). 
 
 The pickle module serializes and de-serializes Python objects(dicts, json ...etc)
 
