got rid of parenthesis

--- a/0/0.md
+++ b/0/0.md
@@ -71,7 +71,7 @@ print(pow(2,38))
 
 
 Calculating `2**38` gives me `274877906944`. 
-When I change the URL from (http://www.pythonchallenge.com/pc/def/0.html) to (http://www.pythonchallenge.com/pc/def/274877906944.html) level0 changes to level1.
+When I change the URL from http://www.pythonchallenge.com/pc/def/0.html to http://www.pythonchallenge.com/pc/def/274877906944.html level0 changes to level1.
 
 
 I'll try to explain the code and how to solve these problems in detail as much as possible because I struggled a lot when solving these problems on my own also the solutions or writeups were hard to understand. It might be because I'm dumb or something lol but anyways... 
