--- a/0/0.md
+++ b/0/0.md
@@ -39,7 +39,7 @@ Calculating `2**38` and replacing it with 0 is likely to solve level0.
 
 Python has many ways to calculate `2**38`
 
-1\. Using the ** operator 
+1\. Using the `**` operator 
 
 
 You can directly use ** to calculate powers of numbers. 
