--- a/0/0.md
+++ b/0/0.md
@@ -58,7 +58,7 @@ That would be another option.
 print(2<<37)
 ```
 
-3\. Using the pow() 
+3\. Using the `pow` function 
 Python provides the built-in [pow](https://docs.python.org/3/library/functions.html#pow) to calculate 
 powers of numbers. 
 
