--- a/1/1.md
+++ b/1/1.md
@@ -23,7 +23,7 @@ E,F,G
 
 That means shifting 2 characters from our ciphertext `g fmnc wms bgblr rpylqjyrc gr zw fylb. rfyrq ufyr amknsrcpq ypc dmp. bmgle gr gl zw fylb gq glcddgagclr ylb rfyr'q ufw rfgq rcvr gq qm jmle. sqgle qrpgle.kyicrpylq() gq pcamkkclbcb. lmu ynnjw ml rfc spj.` will likely gives us the decipher.
 
-There is a famous substitution cipher called [*Caesar_cipher*](https://en.wikipedia.org/wiki/Caesar_cipher) that's similar to the problem in level1.
+There is a famous substitution cipher called [Caesar_cipher](https://en.wikipedia.org/wiki/Caesar_cipher) that's similar to the problem in level1.
 The only difference beteween Caesar cipher and the problem in level1 is that Caesar Cipher shifts 3 letters instead of 2. 
 
 Another famous substitution cipher called [ROT13](https://en.wikipedia.org/wiki/ROT13) is famous. 
@@ -59,7 +59,7 @@ Running `1.py` gives us the decipher.
 
 The decipher looks like this 
 
-*i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url*
+`i hope you didnt translate it by hand. thats what computers are for. doing it in by hand is inefficient and that's why this text is so long. using string.maketrans() is recommended. now apply on the url`
 
 The decipher tells me to use `string.maketrans()` but because I've never used `string.maketrans()` I decided not to. 
 
