--- a/2/2.md
+++ b/2/2.md
@@ -71,7 +71,7 @@ print(answer)
 ```
 
 
-Using the [requests](https://requests.readthedocs.io/en/latest/) module let's you see the html page source without having to right click and inspect.
+Using the [requests](https://requests.readthedocs.io/en/latest/)(regular expression) module let's you see the html page source without having to right click and inspect.
 The downside of getting the page source with the requests module is that it won't just select the mess.
 It's also selects `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
 
