regex in wrong place

--- a/2/2.md
+++ b/2/2.md
@@ -71,7 +71,7 @@ print(answer)
 ```
 
 
-Using the [requests](https://requests.readthedocs.io/en/latest/) (regular expression) module let's you see the html page source without having to right click and inspect.
+Using the [requests](https://requests.readthedocs.io/en/latest/) module let's you see the html page source without having to right click and inspect.
 The downside of getting the page source with the requests module is that it won't just select the mess.
 It's also selects `<!-- find rare characters in the mess below: -->` and `<!-- our mess ...-->`
 
@@ -82,7 +82,7 @@ Then you need to set a boundary that only selects the mess which is between `<!-
 When sending a request to level2 it The request just spits out `<!-- find rare characters in the mess below: -->` and `<!-- our mess ... -->`
 
 
-I can use the [re](https://docs.python.org/3/library/re.html) module  to only select the part I want which is inside the second  `<!-- -->`.
+I can use the [re](https://docs.python.org/3/library/re.html) (regular expression) module to only select the part I want which is inside the second  `<!-- -->`.
 
 
 This is the Python code that does just what I said.
