got rid of italics

--- a/2/2.md
+++ b/2/2.md
@@ -26,7 +26,7 @@ Save the mess into a file and the use grep to grab only the alphabets.
 cat mess | grep -o [a-zA-Z]
 ```
 
-The result is *equality* but the letters are separated by a newline. 
+The result is **equality** but the letters are separated by a newline. 
 
 ```bash 
 e
