got rid of parenthesis

--- a/2/2.md
+++ b/2/2.md
@@ -136,4 +136,4 @@ If you want more clear explanations you should study regex asking chatGPT, Gemin
 # <p>Regex is hard for noobs. <p> 
 
 
-Changing the URL from (http://www.pythonchallenge.com/pc/def/ocr.html) to (http://www.pythonchallenge.com/pc/def/equality.html) takes you to level3.
+Changing the URL from http://www.pythonchallenge.com/pc/def/ocr.html to http://www.pythonchallenge.com/pc/def/equality.html takes you to level3.
