--- a/6/6.md
+++ b/6/6.md
@@ -10,7 +10,8 @@ The image is named `channel.jpg`
 
 There is an HTML comment in the page source `<!-- <-- zip -->` .
 
-Probably has something to do with `zip`.
+
+Level 6 probably  has something to do with `zip`.
 
 There weren't any more helpful hints. so I thought of changing the url from http://www.pythonchallenge.com/pc/def/channel.html
 
@@ -22,13 +23,13 @@ Surprisingly it lets you download a zip file named `channel.zip`.
 Running `file` command on `channel.zip` gives me this. 
 
 
-``` bash 
+``` bash
 file channel.zip 
 channel.zip: Zip archive data, at least v2.0 to extract, compression method=deflate
 ```
 
 
-```bash 
+```bash
 unzip channel.zip
 ```
 
@@ -38,7 +39,7 @@ Unzipping the zip file gave me a lot of text files.
 What I found out after unzipping the `channel.zip` was that all the text files started with a number as in `29.txt` and the number increased and that there was a `readme.txt`
 
 
-```bash 
+```bash
 cat readme.txt 
 ```
 
