got rid of word

--- a/6/6.md
+++ b/6/6.md
@@ -92,7 +92,7 @@ while True:
 ```
 
 
-I started from `90052.txt` that read the next file until I read all the files. 
+I started from `90052.txt` and read the next file until I read all the files. 
 
 
 The code is really similar to the code in level 4.
