finalized answer and explanations

--- a/6/6.md
+++ b/6/6.md
@@ -109,7 +109,87 @@ comments.
 What should I do to collect comments? Does zipfiles have comments hidden?
 
 
-Python has a module name [zipfile](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.comment) to handle zip files.
+Python has a built-in module name [zipfile](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.comment) to handle zip files. 
+
+Using the zipfile module's [zipfile.ZipFile](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile) object you need to open a `.zip` file.
 
 
-In the zipfile module there is a [zipfile.comment](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.comment) it shows the comments in a zipfile.
+I decided to open `channel.zip` like this. 
+
+
+```python
+with zipfile.ZipFile("channel.zip", "r") as zipf:
+```
+
+
+From here we need to check if there's extra information in the `.txt` files inside `channel.zip`. You can do this via `ZipFile.getinfo`(https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.getinfo). 
+
+
+`ZipFile.getinfo` returns a `ZipInfo` object. 
+
+[`ZipFile.comment`](https://docs.python.org/3/library/zipfile.html#zipfile.ZipFile.getinfo) is an attribute of the `ZipFile` object which gives you the comments associated with the zip file itself.
+
+
+`ZipFile.comment` returns `bytes` so I decided to change it to a `str`(unicode data). 
+
+
+Then I gathered all the comments in `channel.zip` and each of the `*.txt` files 
+
+
+It looks like this.
+
+
+```python 
+['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '\n', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '\n', '*', '*', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'X', 'X', ' ', ' ', ' ', ' ', ' ', ' ', 'Y', 'Y', 'Y', 'Y', ' ', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', ' ', 'G', 'G', ' ', ' ', 'E', 'E', 'E', 'E', 'E', 'E', ' ', 'N', 'N', ' ', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', ' ', 'X', 'X', 'X', 'X', 'X', 'X', ' ', ' ', ' ', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', 'E', 'E', 'E', 'E', 'E', 'E', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', 'X', 'X', 'X', ' ', ' ', 'X', 'X', 'X', ' ', 'Y', 'Y', 'Y', ' ', ' ', ' ', 'Y', 'Y', ' ', ' ', 'G', 'G', ' ', 'G', 'G', ' ', ' ', ' ', ' ', ' ', 'E', 'E', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ' ', 'X', 'X', ' ', ' ', ' ', ' ', 'X', 'X', ' ', 'Y', 'Y', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'G', 'G', 'G', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'E', 'E', 'E', 'E', 'E', ' ', ' ', ' ', ' ', ' ', 'N', 'N', 'N', 'N', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ' ', 'X', 'X', ' ', ' ', ' ', ' ', 'X', 'X', ' ', 'Y', 'Y', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'G', 'G', 'G', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'E', 'E', 'E', 'E', 'E', ' ', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', 'X', 'X', 'X', ' ', ' ', 'X', 'X', 'X', ' ', 'Y', 'Y', 'Y', ' ', ' ', ' ', 'Y', 'Y', ' ', ' ', 'G', 'G', ' ', 'G', 'G', ' ', ' ', ' ', ' ', ' ', 'E', 'E', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', ' ', 'X', 'X', 'X', 'X', 'X', 'X', ' ', ' ', ' ', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', 'E', 'E', 'E', 'E', 'E', 'E', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'O', 'O', ' ', ' ', ' ', ' ', 'X', 'X', ' ', ' ', ' ', ' ', ' ', ' ', 'Y', 'Y', 'Y', 'Y', ' ', ' ', ' ', ' ', 'G', 'G', ' ', ' ', ' ', ' ', 'G', 'G', ' ', ' ', 'E', 'E', 'E', 'E', 'E', 'E', ' ', ' ', ' ', ' ', ' ', 'N', 'N', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', '*', '*', '\n', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '\n', ' ', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '\n']
+```
+
+
+It looks like a kind of ASCII art, so instead of just printing the gathered comments using a list like before I unpacked the list using `*`. 
+
+
+```
+O O         O O         X X             Y Y Y Y         G G         G G     E E E E E E   N N             N N         
+O O         O O     X X X X X X       Y Y Y Y Y Y       G G       G G       E E E E E E     N N         N N           
+O O         O O   X X X     X X X   Y Y Y       Y Y     G G   G G           E E               N N     N N             
+O O O O O O O O   X X         X X   Y Y                 G G G               E E E E E           N N N N               
+O O O O O O O O   X X         X X   Y Y                 G G G               E E E E E             N N                 
+O O         O O   X X X     X X X   Y Y Y       Y Y     G G   G G           E E                   N N                 
+O O         O O     X X X X X X       Y Y Y Y Y Y       G G       G G       E E E E E E           N N                 
+O O         O O         X X             Y Y Y Y         G G         G G     E E E E E E           N N                 
+```
+
+
+Indeed it was an ASCII art. The word **`HOCKEY`** is written right in the middle. It looks like **`HOCKEY`** is the answer to me. 
+
+
+So I changed the URL from http://www.pythonchallenge.com/pc/def/channel.html to http://www.pythonchallenge.com/pc/def/hockey.html. 
+
+
+The website shows this **`it's in the air. look at the letters.`**. 
+
+
+I went back to the word **`HOCKEY`** and looked carefully at each letter that made  **`HOCKEY`** which were `H`,`O`,`C`,`K`,`E` and `Y`.
+
+
+```
+O O         O O         X X             Y Y Y Y         G G         G G     E E E E E E   N N             N N         
+O O         O O     X X X X X X       Y Y Y Y Y Y       G G       G G       E E E E E E     N N         N N           
+O O         O O   X X X     X X X   Y Y Y       Y Y     G G   G G           E E               N N     N N             
+O O O O O O O O   X X         X X   Y Y                 G G G               E E E E E           N N N N               
+O O O O O O O O   X X         X X   Y Y                 G G G               E E E E E             N N                 
+O O         O O   X X X     X X X   Y Y Y       Y Y     G G   G G           E E                   N N                 
+O O         O O     X X X X X X       Y Y Y Y Y Y       G G       G G       E E E E E E           N N                 
+O O         O O         X X             Y Y Y Y         G G         G G     E E E E E E           N N         
+```
+
+
+Each letter `H`,`O`,`C`,`K`,`E` and `Y` are made up of `O`, `X`, `Y`, `G`, `E` and `N` what a coincidence.
+
+
+`O`, `X`, `Y`, `G`, `E`, `N` isn't that the word **`OXYGEN`**. 
+
+
+I think that's the answer because it literally is the answer for the sentence we saw earlier `it's in the air. look at the letters.`.
+
+
+Changing the URL from http://www.pythonchallenge.com/pc/def/hockey.html to http://www.pythonchallenge.com/pc/def/oxygen.html takes us to level 7. 
