finalized answer and explanations

--- a/6/6.md
+++ b/6/6.md
@@ -5,7 +5,7 @@ This time a picture of [clothes with a zipper](/6/channel.jpg) is given.
 
 The HTML title is `now there are pairs`. 
 
-The image is named `channel.jpg`
+The image is named `channel.jpg`.
 
 
 There is an HTML comment in the page source `<!-- <-- zip -->` .
@@ -189,7 +189,7 @@ Each letter `H`,`O`,`C`,`K`,`E` and `Y` are made up of `O`, `X`, `Y`, `G`, `E` a
 `O`, `X`, `Y`, `G`, `E`, `N` isn't that the word **`OXYGEN`**. 
 
 
-I think that's the answer because it literally is the answer for the sentence we saw earlier `it's in the air. look at the letters.`.
+I think that's the answer because it literally is the matches the sentence we saw earlier `it's in the air. look at the letters.`.
 
 
 Changing the URL from http://www.pythonchallenge.com/pc/def/hockey.html to http://www.pythonchallenge.com/pc/def/oxygen.html takes us to level 7. 
