talking about modules

--- a/0/0.md
+++ b/0/0.md
@@ -9,9 +9,12 @@ Reading O'reilly books or learning from online courses would help you more.
 
 For courses I recommend [this course](https://www.youtube.com/watch?v=xAcTmDO6NTI&list=PLUl4u3cNGP62A-ynp6v6-LGBCzeH3VAQB) from MIT OCW.
 
+
 The course explains Python in a pretty detailed manner for beginners. 
 The Professor used [this book](https://www.amazon.com/Get-Programming-Learn-code-Python/dp/1617293784) for her lecture's in 2016. Not sure which textbook she's using in 2022 btw. 
 
+
+Each level usually requires you to use a certain module.
 
 ## Level 0
 
