--- a/3/3.md
+++ b/3/3.md
@@ -69,7 +69,7 @@ We need exactly three capital letters. That let me to change the regex.
 
 You need to think outside of the box and change the regex and include a condition where you can't put a capital in front of the 3 capital letters in front or behind the lowercase that we want. 
 
-Here's the final regex **[^A-Z][A-Z]{3}([a-z])[A-Z]{3}[^A-Z]**
+Here's the final regex **`[^A-Z][A-Z]{3}([a-z])[A-Z]{3}[^A-Z]`**
 
 
 Putting an anchor(^) in the range([]) doesn't allow characters in the character set. 
